<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/homepagef"
            android:title="@string/homepage"
            android:icon="@drawable/ic_baseline_home_24"/>

        <item
            android:id="@+id/requestfish"
            android:title="@string/request"
            android:icon="@drawable/ic_baseline_format_list_bulleted_24"/>

        <item
            android:id="@+id/escorts"
            android:title="@string/escorts"
            android:icon="@drawable/ic_baseline_directions_boat_24"/>

        <item
            android:id="@+id/map2"
            android:title="@string/map"
            android:icon="@drawable/ic_baseline_map_24"/>

    </group>
    <item
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/magazinef"
                android:title="@string/magazine"
                android:icon="@drawable/ic_baseline_event_note_24"
                android:checkable="true"/>

            <item
                android:id="@+id/aboutf"
                android:title="@string/about"
                android:icon="@drawable/ic_baseline_error_outline_24"
                android:checkable="true"/>

            <item
                android:id="@+id/contactf"
                android:title="@string/contactus"
                android:icon="@drawable/ic_baseline_contact_page_24"
                android:checkable="true"/>

            <item
                android:id="@+id/feedbackf"
                android:title="@string/feedback"
                android:icon="@drawable/ic_baseline_feedback_24"
                android:checkable="true"/>

            <item
                android:id="@+id/logoutf"
                android:title="@string/logout"
                android:icon="@drawable/ic_baseline_power_settings_new_24"
                android:checkable="true"/>
        </menu>
    </item>
</menu>