<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/regLayout"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="25dp"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Registration"
        android:textColor="@color/themeColor"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="25dp"/>

    <EditText
        android:paddingHorizontal="15dp"
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:textColorHint="@color/themeColor"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:textSize="21sp"/>

    <EditText
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/reg_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="phone"
        android:maxEms="10"
        android:hint="@string/contact_number"
        android:textColor="@color/black"
        android:textColorHint="@color/themeColor"
        android:layout_gravity="center"
        android:drawableTint="@color/themeColor"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:textSize="21sp"/>

    <EditText
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/themeColor"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:textSize="21sp"/>

    <EditText
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/themeColor"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:textSize="21sp"/>

    <EditText
        android:paddingHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:id="@+id/reg_cpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:hint="@string/cpassword"
        android:textColor="@color/black"
        android:textColorHint="@color/themeColor"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:background="@drawable/edit"
        android:textSize="21sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Already have an account? Login"
        android:textColor="@color/themeColor"
        android:onClick="red_Login"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="end"
        android:textSize="15sp"
        android:gravity="center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="#fff"
        android:onClick="btnRegister"
        android:background="@drawable/call_button"
        />
</LinearLayout>